--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
         <module>messenger-repository</module>
         <module>messenger-service</module>
         <module>messenger-server</module>
+        <module>messenger-model</module>
+        <module>auth-service</module>
     </modules>
 
     <parent>
@@ -32,18 +34,15 @@
             <artifactId>spring-boot-starter</artifactId>
             <version>2.5.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+
     </dependencies>
 
-    <build>
-        <plugins>
-            <!-- Spring Boot Maven Plugin -->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.5.5</version>
-            </plugin>
-        </plugins>
-    </build>
+
 
 
 </project>
