--- a/messenger-server/src/main/resources/application.properties
+++ b/messenger-server/src/main/resources/application.properties
@@ -1,7 +1,5 @@
 ######################################Logging levels############
-logging.level.com.test.registrationUser=INFO
-logging.level.org.hibernate.SQL=TRACE
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.example=INFO
 server.port=8080
 #############################Jwt Token#####################
 jwt.token.expiry=5*60*60*1000
