master-dev2: made changes to pass test cases

--- a/messenger-server/src/main/resources/application.yml
+++ b/messenger-server/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/mydatabase
+      uri: mongodb://localhost:27017/messenger
+
+server:
+  servlet:
+    context-path:
+
